Closed Bug 538412 Opened 15 years ago Closed 15 years ago

JIT should not call intToAtom() just to attempt constant folding

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: edwsmith, Unassigned)

References

Details

Attachments

(1 file)

LirHelper::nativeToAtom() attemps to constant-fold constant integers if they fit in Atom, but not otherwise; it calls core->intToAtom() which results in an allocation if the int doesn't fit.  the allocation is instant garbage and interferes with background compilation.

instead the jit should call atomIsValidIntptrValue() which avoids allocation.
Blocks: 538185
Target Milestone: --- → Future
Attachment #420661 - Flags: review?(siwilkin) → review?(rreitmai)
Attachment #420661 - Flags: review?(rreitmai) → review+
pushed last week
http://hg.mozilla.org/tamarin-redux/rev/82e397659f5d
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: