Use atomIsValidIntptrAtom() instead of AvmCore::intToAtom() to test for small constant integer atoms (bug 538412 r=rreitmai+)

Doing GC allocations from within the compiler is in the way of background compilation,
and any such allocation is instant garbage anyway.

Also took the opportunity to create some atom helpers in atom-inlines.h for this purpose.